Datalist: fixed getValue from collection with idProperty, meta keys, blur. Complex: fix required asterix. Form: remove bottom margin. Layout: fix visible type logic.

--- a/resources/styles/themes/new/styles.css
+++ b/resources/styles/themes/new/styles.css
@@ -268,7 +268,7 @@ svg.svg-grid-icons.svg-icons_flag-none {
     padding-right: 10px;
 }
 
-.layout__vertical-layout > div,
+.layout__vertical-layout > div:not(:last-child),
 .layout__vertical-layout-item {
     margin-bottom: 20px;
 }
